kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bosca
  annotations:
    operator.1password.io/auto-restart: "true"
